src/ui/App.css
header {
    text-align: center;
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 999;
}

header h1 {
    margin-left: auto;
    margin-right: auto;
}

header button.nav {
    position: absolute;
    left: 20px;
    background-color: transparent;
    border-radius: 5px;
    border: 1px solid transparent;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 36px;
    width: 36px;
    z-index: 1;
}

header button.nav:hover {
    background-color: hsl(217, 44%, 80%);
}

header button.nav:active {
    background-color: lightgray;
}

main {
    max-width: 800px;
    margin: auto;
    padding: 0 30px;
}

input.list-title {
    font-size: 32px;
    font-weight: bold;
    text-align: center;
    width: 300px;
}

